Fix alignment of text in shop now button on home page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -42,6 +42,8 @@ hr {
     left: 40px;
     bottom: 100px;
     z-index: 25;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn-black {
@@ -406,5 +408,14 @@ color: #17a2b8; /* text-info */
 
   body {
       height: calc(100vh - 116px);
+  }
+}
+
+/* Smaller iframe on mobloe screens */
+
+@media (max-width: 500px){
+  iframe {
+    height: 400px;
+    width: 350px;
   }
 }
